<resources>
    <string name="app_name">BlueLimit</string>
    <string name="login">LOGIN</string>
    <string name="apply">APPLY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="username">USERNAME</string>
    <string name="pwd">PASSWORD</string>
    <string name="login_btn">LOGIN</string>
    <string name="forget_pwd">Forget Password?</string>
    <string name="pwd_confirm">Confirm Password</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="update_pwd">Change Password</string>
    <string name="new_pwd">New Password</string>
    <string name="chnge_pwd">CHANGE PASSWORD</string>
    <string name="oia_text">this is oia text.this is oia text.this is oia text.this is oia text.this is oia text.this is oia text.this is oia text.this is oia text.</string>
    <string name="units">Units</string>
    <string name="guest_house">Guest House</string>
    <string name="locker_membership">Locker Membership</string>
    <string name="locker_member">Locker Member</string>
    <string name="oia_form_text">OIA RESORT APPLICATION FORM</string>
    <string name="boho_form_text">BOHO RESORT APPLICATION FORM</string>
    <string name="marine_form_text">Marine Services Application</string>
    <string name="annual_mem">UNIT MEMBERSHIP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_no">ID No.</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_service">Select Service</string>
    <string name="title">Title</string>
    <string name="profession">Profession</string>
    <string name="home_country">Home Country</string>
    <string name="offc_country">Office Country</string>
    <string name="home_city">Home City</string>
    <string name="offc_city">Office City</string>
    <string name="no_of_fam_membs">No.of Family Members</string>
    <string name="profile_img">Profile Image:</string>
    <string name="browse">Browse</string>
    <string name="select_facility">Select Facility</string>
    <string name="oia_info">Inspired by the beautiful islands of Greece, OIA is a beach resort located in one of the most unique seaside in North Obhur.
    \n\nThis Exclusive boutique resort includes wide range of services and facilities such as Micro Gym, Beach Restaurant, Bakery, Water Park, Volley Ball Court, Event Room, Kids Area, Female / Kids Pool, infinity Pool, Sandy Beach, Business Center and an exclusive guest house.
</string>
    <string name="boho_info">Boho Beach is another unique concept presented by Blue Limits Co. It is designed to be an exceptional gateway that will have you mesmerized and reconnect with the good vibes in no time.
\n\nBoho Beach is where freedom, peace, and happiness are in abundance and it is comprised of a very limited number of villas, one bedroom apartments, studios and locker memberships along with amenities and facilities that will make your visits worthwhile.</string>
    <string name="marine_info1">Above and below water inspection services for marine and coastal structures such as seabed, seawalls, piers, groins and breakwaters.
</string>
    <string name="marine_info2">Marina and component inspections.</string>
    <string name="marine_info3">Technical inspection (pre-purchase &amp; periodic).</string>
    <string name="marine_info4">Feasibility studies.</string>
    <string name="marine_info5">Cost estimation studies &amp; assessments.</string>
    <string name="marine_info6">Infrastructure and facilities assessments.</string>
    <string name="marine_info7">Third party verification</string>
    <string name="marine_info8">Offer repair and/or replacement solutions.</string>
    <string name="marine_info9">Due diligence and valuation.</string>
    <string name="personal_info">My Personal Info</string>
    <string name="fam_members">MY FAMILY MEMBERS</string>
    <string name="fam_extra_members">EXTRA FAMILY MEMBERS</string>
    <string name="mobile">Mobile No:</string>
    <string name="unit">Unit No:</string>
    <string name="email_profile">Email:</string>
    <string name="id_profile">ID No:</string>
    <string name="total_mems">Total Family Members:</string>
    <string name="extra_mems">Extra Family Members:</string>
    <string name="invite">INVITE A VISITOR</string>
    <string name="visitor">Visitor</string>
    <string name="visitors">No of Visitors</string>
    <string name="visiting_date">Visiting Date/Time</string>
    <string name="name_visi">Visitor Name</string>
    <string name="id_visi">ID No.</string>
    <string name="mobile_visi">Mobile</string>
    <string name="price">Price</string>
    <string name="pay">I will pay</string>
    <string name="pay_visitor">Visitor will pay</string>
    <string name="free">Free</string>
    <string name="name">Name:</string>
    <string name="pay_now">Pay Now</string>
    <string name="edit">Edit</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_profile">My Profile</string>
    <string name="invite_visitor">Invite a visitor</string>
    <string name="reservation">Guest House Reservation</string>
    <string name="contract">My Contract</string>
    <string name="services">Request Services</string>
    <string name="about">About Blue Limits</string>
    <string name="contact">Contact Us</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="login_menu">Login</string>
    <string name="logout_msg">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discount">Discount %</string>
    <string name="discount_msg">Discount should be till</string>
    <string name="discount_empty">Please enter discount.</string>
    <string name="admin">Admin</string>
    <string name="customer">Customer</string>
    <string name="days_rem">DAYS REMAINING</string>
    <string name="total_invites">TOTAL INVITEES</string>
    <string name="expiry">CONTRACT EXPIRY</string>
    <string name="my_points">MY POINTS</string>
    <string name="points">POINTS</string>
    <string name="my_dashboard">MY DASHBOARD</string>
    <string name="req_trip">REQUEST A TRIP</string>
    <string name="oia_beach">OIA BEACH</string>
    <string name="boho_beach">BOHO BEACH</string>
    <string name="marine_services">MARINE SERVICES</string>
    <string name="about_us">ABOUT BLUE LIMITS</string>
    <string name="available_units">Available units</string>
    <string name="payable">Total amount Payable:</string>
    <string name="guests">No. of Guests</string>
    <string name="max_guests">guests are allowed</string>
    <string name="max">Max</string>
    <string name="select_resort">Select Resort</string>
    <string name="select_role">Select Role</string>
    <string name="check_in">Check In Date</string>
    <string name="check_out">Check out Date</string>
    <string name="guest">Guest</string>
    <string name="guest_name">Guest Name</string>
    <string name="contact_detail">Contact Details</string>
    <string name="oia_tel">Tel : +966-12-215-0942</string>
    <string name="oia_fax">Fax : +966-12-215-0941</string>
    <string name="po_Box">PO Box : +966-12-215-0942</string>
    <string name="oia_address">Jeddah 118500</string>
    <string name="oia_email">Email : info@bluelimits.com</string>
    <string name="profile_error">Profile loading failed.</string>
    <string name="login_error">Login Failed</string>
    <string name="pwd_change_error">Password cannot be changed.</string>
    <string name="pwd_change">Password is updated.</string>
    <string name="connectivity_error">Internet not connected</string>
    <string name="empty_fields">Please enter data</string>
    <string name="no_pckg_error">Please select any package.</string>
    <string name="ok">Ok</string>
    <string name="loading_error">Loading Failed</string>
    <string name="adding_member_error">Sorry.Cannot add member</string>
    <string name="missing_date">Please add visiting date first.</string>
    <string name="submit">Submit</string>
    <string name="add_visitor_error">Please select atleast 1 female</string>
    <string name="add_member_error">Member id already exists.</string>
    <string name="units_loading_error">Units loading failed</string>
    <string name="guests_exceeded">Guest limit exceeded.</string>
    <string name="adding_guest_error">Sorry.Cannot add guest</string>
    <string name="facility">facility</string>
    <string name="booking_unavailable">Sorry.Booking not avaialble.</string>
    <string name="brochure">BROCHURE</string>
    <string name="pckg_unavialable">Pacakges not available at selected time.</string>
    <string name="reserv_date">Reservation date</string>
    <string name="full_name">Full Name</string>
    <string name="contact_num">Contact Number</string>
    <string name="invalid_date">Invalid date</string>
    <string name="date_format">DD-MM-YYYY hh:mm a</string>
    <string name="gh_date_format">DD-MM-YYYY</string>
    <string name="number_code">966 5</string>
    <string name="server_number_code">9665</string>
    <string name="booking_unavialble">Booking not avialble.Choose another date.</string>
    <string name="select_date">Select date</string>
    <string name="hours">Hours</string>
    <string name="max_visitors">visitors are allowed</string>
    <string name="empty_name">Please enter visitor name.</string>
    <string name="id_length_error">Please enter 10 digit id.</string>
    <string name="contact_error">Contact number should be of atleast 8 digits.</string>
    <string name="email_error">Invalid email.</string>
    <string name="id_error">Please enter id.</string>
    <string name="lname_error">Please enter last name.</string>
    <string name="fname_error">Please enter first name.</string>
    <string name="guest_visitor">guest house visitor</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="pwd_match_error">Passwords do not match.</string>
    <string name="no_of_visitors">No of Visitors</string>
    <string name="date_time">Date Time</string>
    <string name="delete_msg">Do you want to delete this visitor?</string>
    <string name="delete_error">Sorry. Unable to delete visitor.</string>
    <string name="req_services">Request Services</string>
    <string name="reservation_title">THANK YOU FOR APPLYING</string>
    <string name="reservation_msg">This application is not a binding contract and it is subject to the approval
        of our management.</string>
    <string name="in_progress">In-progress</string>
    <string name="rejected">Rejected</string>
    <string name="completed">Completed</string>
    <string name="pending">pending</string>
    <string name="req_id">Request ID:</string>
    <string name="req_date_time">Request Date/Time:</string>
    <string name="service">Service:</string>
    <string name="comments">Comments:</string>
    <string name="create">Create New</string>
    <string name="req_service">Request Service Application</string>
    <string name="attach_img">Attach Image</string>
    <string name="my">My</string>
    <string name="no_of_days">No. of Days :</string>
    <string name="setup_unit">Setup Unit : </string>
    <string name="serv_name">Service Name : </string>
    <string name="no_of_guests">No of Guests : </string>
</resources>