<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_visitor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/jura_semi_bold"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/visitor"
        android:textColor="@color/white"
        android:textStyle="bold"></Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/jura_demi_bold"
                android:gravity="center_vertical"
                android:text="@string/name_visi"
                android:textColor="@color/grey_text"></TextView>

            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/jura_demi_bold"
                android:gravity="center_vertical"
                android:text="@string/id_visi"
                android:textColor="@color/grey_text"></TextView>

            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/jura_demi_bold"
                android:gravity="center_vertical"
                android:text="@string/mobile_visi"
                android:textColor="@color/grey_text"></TextView>

            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/jura_demi_bold"
                android:gravity="center_vertical"
                android:text="@string/gender"
                android:textColor="@color/grey_text"></TextView>

            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/jura_demi_bold"
                android:gravity="center_vertical"
                android:text="@string/price"
                android:textColor="@color/grey_text"></TextView>

            <CheckBox
                android:id="@+id/cb_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_text"
                android:fontFamily="@font/jura_demi_bold"
                android:paddingLeft="15dp"
                android:text="@string/pay"
                android:textColor="@color/grey_text"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_visitors_name"
                android:layout_width="235dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/jura_demi_bold"
                android:inputType="text"
                android:lines="1"></EditText>

            <EditText
                android:id="@+id/et_visitors_id"
                android:layout_width="235dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/jura_demi_bold"
                android:inputType="number"
                android:lines="1"></EditText>

            <EditText
                android:id="@+id/et_visitors_mobile"
                android:layout_width="235dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/jura_demi_bold"
                android:inputType="text"
                android:lines="1"></EditText>


            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey_text"
                    android:checked="true"
                    android:fontFamily="@font/jura_demi_bold"
                    android:text="@string/male"
                    android:textColor="@color/grey_text" />

                <CheckBox
                    android:id="@+id/checkbox_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:buttonTint="@color/grey_text"
                    android:fontFamily="@font/jura_demi_bold"
                    android:text="@string/female"
                    android:textColor="@color/grey_text" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_pay"
                android:layout_width="235dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/jura_demi_bold"
                android:inputType="number|text"
                android:lines="1"></EditText>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>