<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_15sdp"
    >


    <Button
        android:id="@+id/btn_guest"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/jura_semi_bold"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/_20sdp"
        android:text="@string/guest"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"></Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@id/btn_guest"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/navy_blue"
                android:fontFamily="@font/jura_demi_bold"
                android:gravity="center_vertical"
                android:textSize="@dimen/_13ssp"
                android:text="@string/guest_name"></TextView>

            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/navy_blue"
                android:fontFamily="@font/jura_demi_bold"
                android:gravity="center_vertical"
                android:textSize="@dimen/_13ssp"
                android:text="@string/id_visi"></TextView>

            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/navy_blue"
                android:fontFamily="@font/jura_demi_bold"
                android:gravity="center_vertical"
                android:textSize="@dimen/_13ssp"
                android:text="@string/mobile_visi"></TextView>

            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/navy_blue"
                android:fontFamily="@font/jura_demi_bold"
                android:gravity="center_vertical"
                android:textSize="@dimen/_13ssp"
                android:text="@string/gender"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_guest_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="15dp"
                android:textColor="@color/navy_blue"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/jura_demi_bold"
                android:inputType="text"
                android:textSize="@dimen/_11ssp"
                android:lines="1"></EditText>

            <EditText
                android:id="@+id/et_guest_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/navy_blue"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/jura_demi_bold"
                android:inputType="number"
                android:lines="1"></EditText>

            <include
                android:id="@+id/layout_mobile"
                layout="@layout/layout_contact_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_20sdp"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey_text"
                    android:checked="true"
                    android:button="@drawable/chkbox_bg"
                    android:paddingLeft="@dimen/_10sdp"
                    android:fontFamily="@font/jura_demi_bold"
                    android:text="@string/male"
                    android:textColor="@color/navy_blue" />

                <CheckBox
                    android:id="@+id/checkbox_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:buttonTint="@color/grey_text"
                    android:fontFamily="@font/jura_demi_bold"
                    android:text="@string/female"
                    android:button="@drawable/chkbox_bg"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColor="@color/navy_blue" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>