<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_15sdp">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/jura_demi_bold"
            android:text="@string/name"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/jura_demi_bold"
            android:text="@string/mobile"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/jura_demi_bold"
            android:text="@string/id_no"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/jura_demi_bold"
            android:text="status"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/jura_demi_bold"
            android:text="@string/gender"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tv_who"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/jura_demi_bold"
            android:text="Who will Pay"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_qr"
        android:layout_width="@dimen/_83sdp"
        android:layout_height="@dimen/_83sdp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_60sdp"
        >

    </ImageView>

</RelativeLayout>